# prime

./: Cargo.toml  README.md
src/: db.rs  droptable.rs  frames.rs  item_view.rs  live.rs  main.rs  persistance.rs  recipe.rs  recipes.rs  relic.rs  relics.rs  requirement.rs  resources.rs  setup.rs  ui.rs  warframes.rs  weapons.rs  worldstate.rs
src/cache/: droptable.rs  index.rs  load.rs  manifest.rs  mod.rs  recipes.rs  relics.rs  resources.rs  sentinels.rs  state.rs  warframes.rs  weapons.rs  worldstate.rs
src/live/: droptable.rs  export.rs  mod.rs  worldstate.rs
src/structures/: active_relics.rs  invasions.rs  items.rs  mod.rs  recipes.rs  relic_rewards.rs  relics.rs  requires.rs  resources.rs  resurgence_relics.rs  types.rs
