[package]
name = "prime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.9", features = ["json"] }
lzma-rs = "0.3"
scraper = "0.20"
anyhow = { version="1.0", features=["backtrace"] }
eframe = "0.29"
dirs = "5.0"
convert_case = "0.6"