[package]
name = "prime"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "3.0", features = ["json"] }
lzma-rs = "0.3"
scraper = "0.23"
anyhow = { version="1.0", features=["backtrace"] }
eframe = "0.31"
dirs = "6.0"